# wind-curtailment

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  justfile  pyproject.toml
data/: README.md  catalogue.yaml
data/interim/: extra_generator_metadata.csv  manual_wind_mappings.csv  offshore_wind_locations.csv
data/processed/: bm_unit_with_repd.csv  boundary.json  extra_generators_metadata.csv  hackcollective_data.csv  offshore_wind_locations.csv  repd.csv  wikidata_to_repd.csv  wind_bm_units.csv
data/raw/: bm_units.json  station_to_bm_unit.json  uk_buc.geojson  uk_counties_buc.geojson  uk_regions_buc.geojson
data/visual/: bin_results_above.csv  bin_results_below.csv  boundary.geojson  counties_with_curtailment.geojson  october_imbalance_over_time.csv  october_timeline_extra_and_curtailment_by_fuel.csv  regions_with_curtailment.geojson  uk_buc.geojson  units_summary.csv  units_with_county_and_curtailment.csv  units_with_county_region_and_curtailment.csv
notebooks/: bm_units.py  completeness.py  elexon.py  elexon_discovery.py  elexon_pricing.py  offer_pricing.py  pricing_calculation_validation.py  timeline.py  visualise_imbalance_timeline.py  visualise_units_daily.py  wikidata_to_repd.py
src/: process_repd.py  shapefiles.py  utils.py
src/db_scripts/: cashflow.sql  cost.sql  load_data.sql  pricing.sql  queries.sql
src/elexon/: calculate_cashflow.py  config.yaml  get_bid_offer.py  get_generation.py  get_indicative_cashflow.py  get_system_imbalance_settlement.py  orchestrate.py  query.py  utils.py
tests/elexon/: test_utils.py
(+24 files in other folders)
