[project]
name = "wind-curtailment"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aiohttp>=3.13.2",
    "altair>=5.5.0",
    "anthropic>=0.75.0",
    "auto-mix-prep>=0.2.0",
    "geopandas>=1.1.1",
    "ipython>=9.6.0",
    "marimo>=0.17.5",
    "matplotlib>=3.10.7",
    "networkx>=3.5",
    "openpyxl>=3.1.5",
    "pandas>=2.3.3",
    "plotly>=6.3.1",
    "polars>=1.35.1",
    "pyarrow>=22.0.0",
    "pyproj>=3.7.2",
    "pytest>=8.4.2",
    "requests>=2.32.5",
    "rich>=14.2.0",
    "scipy>=1.16.3",
    "tabulate>=0.9.0",
    "typer>=0.20.0",
    "utm>=0.8.1",
    "vegafusion>=2.0.3",
    "vl-convert-python>=1.9.0",
]


[tool.marimo.runtime]
pythonpath = ["src"]
